--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "ultimate-garments-server",
-  "version": "0.0.0",
+  "name": "ultimate-garments",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "npm install && cd client && npm install && npm run build",
+    "build": "cd client && npm run build",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "cd client && npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "firebase": "^9.20.0",
     "http-errors": "~1.6.3",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
     "pg": "^8.10.0",
