--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
     "pg": "^8.10.0",
+    "serverless-mysql": "^1.5.5",
     "stripe": "^12.0.0",
     "uuid": "^9.0.0"
   }
