--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,10 @@
       "use": "@vercel/node"
     },
     {
-      "src": "./client/build",
+      "src": "./client/dist",
       "use": "@vercel/static"
     }
   ],
-
   "rewrites": [
     {
       "source": "/(.*)",
