--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "@rollup/plugin-replace": "^5.0.2",
     "axios": "^1.3.2",
     "firebase": "^9.21.0",
     "jwt-decode": "^3.1.2",
