--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@
 /client/.env
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
