--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ultimate-garments",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "build": "cd client && npm run build",
     "start": "node server.js",
@@ -9,6 +12,7 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -24,5 +28,8 @@
     "serverless-mysql": "^1.5.5",
     "stripe": "^12.0.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
