--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cd client && npm run build",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd client && npm start"
+    "client": "cd client && npm start",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
